--- a/index.html
+++ b/index.html
@@ -1,121 +1,291 @@
-
-  <div id="site-header"></div>
 <!DOCTYPE html>
 
 <html lang="en">
-<head>
-<style>
-    body { font-family: Arial, sans-serif; margin: 0; background: #FFFAF0; color: #333; }
-    header { background: linear-gradient(to right, #FFD700, #FFA500); padding: 60px 20px; text-align: center; color: white; }
-    section { padding: 40px 20px; max-width: 1100px; margin: auto; }
-    table { width: 100%; border-collapse: collapse; margin-top: 20px; }
-    th, td { padding: 12px; border: 1px solid #ccc; text-align: center; }
-    th { background-color: #FFA500; color: white; }
-    .solutions { display: flex; flex-wrap: wrap; gap: 20px; margin-top: 20px; }
-    .solution { flex: 1; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 0 5px rgba(0,0,0,0.1); }
-    footer { background: #333; color: white; text-align: center; padding: 20px; }
-  
-    body { font-family: Arial, sans-serif; background-color: #FFFDF7; margin: 0; padding: 0; color: #333; }
-    header { background: #009245; color: white; padding: 1em 2em; text-align: center; }
-    nav a { margin: 0 10px; color: white; text-decoration: none; }
-    footer { background: #009245; color: white; text-align: center; padding: 1em; }
-    
-        body { font-family: 'Open Sans', sans-serif; background-color: #FFFDF7; margin: 0; padding: 0; color: #333; }
-        header { background: linear-gradient(to right, #FFA94D, #FFD580); color: white; padding: 2em 1em; text-align: center; }
-        nav a { margin: 0 15px; color: white; text-decoration: none; font-weight: 600; }
-        section { padding: 2em 1.5em; }
-        .project-card {
-            background: white; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-            padding: 1em; margin: 1em; max-width: 300px; text-align: center;
-        }
-        footer { background: #222; color: white; text-align: center; padding: 2em; }
-        .btn-main {
-            background-color: #4CAF50; color: white; padding: 10px 20px;
-            text-decoration: none; border-radius: 6px; font-weight: bold;
-            display: inline-block; margin-top: 1em;
-        }
-        </style>
-  <link rel="stylesheet" href="/styles/main.css">
+<head><link href="main.css" rel="stylesheet"/>
 <meta charset="utf-8"/>
 <title>WattSun Solar - Home</title>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<link href="main.css" rel="stylesheet"/>
+<style>
+    .cta {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      margin-top: 24px;
+      margin-bottom: 0;
+    }
+    .cta h2 {
+      margin-bottom: 7px;
+      font-size: 1.5em;
+    }
+    .cta p {
+      margin-bottom: 16px;
+      margin-top: 0;
+      font-size: 1.07em;
+    }
+    .cta .loan-btn {
+      margin: 0 auto;
+      min-width: 230px;
+      font-size: 1.14em;
+      font-weight: bold;
+    }
+    section {
+      margin-bottom: 22px;
+      padding-top: 28px;
+      padding-bottom: 22px;
+    }
+    .feature-row, .steps-row {
+      margin-bottom: 16px !important;
+    }
+    .testimonials-list {
+      margin-bottom: 10px;
+    }
+    footer {
+      margin-top: 0 !important;
+    }
+    h2, .centered-section-title {
+      margin-top: 0;
+    }
+  
+/* === Mobile Enhancements === */
+.mobile-nav {
+  display: none;
+}
+@media (max-width: 768px) {
+  header {
+    height: 56px;
+  }
 
+  .mobile-nav {
+    display: flex;
+    position: fixed;
+    bottom: 0;
+    height: 56px;
+    width: 100%;
+    background-color: #f4a940;
+    justify-content: space-around;
+    align-items: center;
+    z-index: 1000;
+    box-shadow: 0 -2px 6px rgba(0, 0, 0, 0.1);
+  }
+
+  .mobile-nav a {
+    font-size: 24px;
+    text-decoration: none;
+    color: black;
+    position: relative;
+    line-height: 1;
+  }
+
+  #cart-count {
+    background: red;
+    color: white;
+    border-radius: 50%;
+    padding: 2px 6px;
+    font-size: 12px;
+    position: absolute;
+    top: -8px;
+    right: -12px;
+  }
+}
+
+@media (max-width: 768px) {
+  .mobile-nav a {
+    font-size: 20px;
+    padding: 6px;
+  }
+}
+
+@media (max-width: 768px) {
+  .mobile-nav {
+    height: 56px;
+    padding: 0;
+  }
+
+  .mobile-nav a {
+    font-size: 20px;
+    height: 56px;
+    line-height: 56px;
+    padding: 0;
+    margin: 0;
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  #cart-count {
+    top: 4px;
+    right: 10px;
+  }
+}
+
+@media (max-width: 768px) {
+  #cart-count {
+    position: absolute;
+    top: 6px;
+    right: 10px;
+    background: red;
+    color: white;
+    font-size: 11px;
+    min-width: 16px;
+    height: 16px;
+    border-radius: 8px;
+    padding: 0 5px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+</style>
 </head>
 <body>
 <header>
-<h1 style="text-align:center; margin: 0; padding: 10px; background:#f7b733; color: #fff;">WattSun Solar</h1>
-<nav style="background:#f7b733; text-align:center; padding: 10px;"><a href="index.html">Home</a><a href="solutions.html">Solutions</a><a href="shop.html">Shop</a><a href="projects.html">Projects</a><a href="financing.html">Financing</a><a href="contact.html">Contact</a><a href="cart.html">🛒 Cart</a></nav>
+<div class="header-bar">
+<h1>WattSun Solar</h1>
+<button aria-label="Open menu" class="nav-toggle">☰</button>
+</div>
+<nav>
+<a href="index.html">Home</a>
+<a href="solutions.html">Solutions</a>
+<a href="shop.html">Shop</a>
+<a href="financing.html">Financing</a>
+<a href="projects.html">Projects</a>
+<a href="contact.html">Contact</a>
+<!--<a href="cart.html">🛒 Cart</a>-->
+</nav>
 </header>
-
-  <div id="site-header
-
-<div class="hero" style="background: #ffffff; color: #000000; text-align: center; padding: 100px 20px;"><div style="max-width: 900px; margin: auto;">
-<h1>Powering Kenya with Clean, Reliable Solar Energy</h1><p>Affordable solar solutions for homes, businesses, and off-grid communities across Kenya.</p><p>WattSun Solar is dedicated to empowering communities through clean, renewable energy. We provide tailored solar installations, financing solutions, and after-sales support nationwide.
-    
-</p><a class="btn" href="solutions.html">Explore Solutions</a></div></div>
+<div class="hero">
+<div class="hero-inner">
+<h1>Powering Kenya with Clean, Reliable Solar Energy</h1>
+<p>Affordable solar solutions for homes, businesses, and off-grid communities across Kenya.</p>
+<p>WattSun Solar is dedicated to empowering communities through clean, renewable energy. We provide tailored solar installations, financing solutions, and after-sales support nationwide.</p>
+<a class="loan-btn" href="solutions.html">Explore Solutions</a>
+</div>
+</div>
 <section>
-<h2 style="text-align:center;">Why Choose WattSun?</h2>
-<div class="features">
-<div class="feature">
-<h3>☀️ 100% Solar-Driven</h3>
-<p>Clean energy for homes, farms, and businesses.</p>
+<h2 class="centered-section-title">Why Choose WattSun?</h2>
+<div class="feature-row">
+<div class="feature-box">
+<div class="feature-icon">☀️</div>
+<div>
+<div class="feature-title">100% Solar-Driven</div>
+<div class="feature-desc">Clean energy for homes, farms, and businesses.</div>
 </div>
-<div class="feature">
-<h3>💰 Flexible Financing</h3>
-<p>From just 50% deposit. Up to 36 months repayment.</p>
 </div>
-<div class="feature">
-<h3>🔧 Pro Installers</h3>
-<p>Available across Nairobi, Kisumu, Eldoret, Naivasha.</p>
+<div class="feature-box">
+<div class="feature-icon">💰</div>
+<div>
+<div class="feature-title">Flexible Financing</div>
+<div class="feature-desc">From just 50% deposit. Up to 36 months repayment.</div>
 </div>
-<div class="feature">
-<h3>🛠️ After-Sales Support</h3>
-<p>We maintain, clean, and upgrade your system.</p>
+</div>
+<div class="feature-box">
+<div class="feature-icon">🛠️</div>
+<div>
+<div class="feature-title">Pro Installers</div>
+<div class="feature-desc">Available across Nairobi, Kisumu, Eldoret, Naivasha.</div>
+</div>
+</div>
+<div class="feature-box">
+<div class="feature-icon">🔧</div>
+<div>
+<div class="feature-title">After-Sales Support</div>
+<div class="feature-desc">We maintain, clean, and upgrade your system.</div>
+</div>
 </div>
 </div>
 </section>
 <section>
 <h2 style="text-align:center;">Success Stories</h2>
-<div class="testimonial">
-<p><strong>🏡 Family Home – Karen</strong>: 3kW rooftop + battery backup.</p>
+<div class="testimonials-list">
+<div class="testimonial-row">
+<img alt="Family Home – Karen" class="testimonial-img" src="images/family-home-karen.jpg"/>
+<div class="testimonial-text">
+<p><strong> Family Home – Karen</strong>: 3kW rooftop + battery backup.</p>
 </div>
-<div class="testimonial">
-<p><strong>🏭 Nairobi Factory</strong>: 9kW hybrid inverter system for full-time operations.</p>
 </div>
-<div class="testimonial">
-<p><strong>🌍 Off-Grid Lodge – Naivasha</strong>: Complete off-grid system with storage.</p>
+<div class="testimonial-row">
+<img alt="Nairobi Factory" class="testimonial-img" src="images/nairobi-factory.jpg"/>
+<div class="testimonial-text">
+<p><strong> Nairobi Factory</strong>: 9kW hybrid inverter system for full-time operations.</p>
+</div>
+</div>
+<div class="testimonial-row">
+<img alt="Off-Grid Lodge – Naivasha" class="testimonial-img" src="images/offgrid-lodge-naivasha.jpg"/>
+<div class="testimonial-text">
+<p><strong> Off-Grid Lodge – Naivasha</strong>: Complete off-grid system with storage.</p>
+</div>
+</div>
 </div>
 </section>
 <section>
-<h2 style="text-align:center;">How It Works</h2>
-<div class="steps">
-<div class="step">
-<h3>1. Choose a System</h3>
-<p>Select the right package from our shop.</p>
+<h2 class="centered-section-title">How It Works</h2>
+<div class="steps-row">
+<div class="step-box">
+<div class="step-title">1. Choose a System</div>
+<div class="step-desc">Select the right package from our shop.</div>
 </div>
-<div class="step">
-<h3>2. Apply for Financing</h3>
-<p>Pay your deposit and spread the balance.</p>
+<div class="step-box">
+<div class="step-title">2. Apply for Financing</div>
+<div class="step-desc">Pay your deposit and spread the balance.</div>
 </div>
-<div class="step">
-<h3>3. We Install</h3>
-<p>Certified technicians handle the setup.</p>
+<div class="step-box">
+<div class="step-title">3. We Install</div>
+<div class="step-desc">Certified technicians handle the setup.</div>
 </div>
-<div class="step">
-<h3>4. Start Saving!</h3>
-<p>Enjoy clean, uninterrupted solar power.</p>
+<div class="step-box">
+<div class="step-title">4. Start Saving!</div>
+<div class="step-desc">Enjoy clean, uninterrupted solar power.</div>
 </div>
 </div>
 </section>
 <section class="cta">
 <h2>Ready to go solar?</h2>
 <p>Estimate your loan &amp; start saving today!</p>
-<a class="btn" href="financing.html">Estimate My Loan</a>
+<a class="loan-btn" href="financing.html">Estimate My Loan</a>
 </section>
 <footer>
-<p>Contact us: +254 712 345678 | info@wattsun.co.ke</p>
+<div class="footer-contacts">
+<a href="mailto:info@wattsun.co.ke">info@wattsun.co.ke</a>
+</div>
 <p>© 2025 WattSun Solar. All rights reserved.</p>
 </footer>
-  <div id="site-footer"></div>
-  <div id="site-footer"></div>
+<footer class="mobile-nav">
+<a aria-label="Home" href="index.html">🏠</a>
+<a aria-label="Account" href="account.html">👤</a>
+<a aria-label="Cart" href="cart.html">🛒<span id="cart-count">2</span></a>
+<a aria-label="Menu" href="javascript:void(0);" onclick="document.querySelector('.nav-toggle').click();">☰</a>
+</footer>
+<script>
+document.addEventListener('DOMContentLoaded', function () {
+  const navToggle = document.querySelector('.nav-toggle');
+  const header = document.querySelector('header');
+  const nav = header.querySelector('nav');
+
+  if (navToggle && header) {
+    navToggle.addEventListener('click', function (e) {
+      e.stopPropagation();
+      header.classList.toggle('nav-open');
+    });
+  }
+
+  document.querySelectorAll('header nav a').forEach(link => {
+    link.addEventListener('click', () => header.classList.remove('nav-open'));
+  });
+
+  document.body.addEventListener('click', function (e) {
+    if (
+      header.classList.contains('nav-open') &&
+      !nav.contains(e.target) &&
+      !navToggle.contains(e.target)
+    ) {
+      header.classList.remove('nav-open');
+    }
+  }, true);
+});
+</script>
 </body>
 </html>
